--- a/public/css/form.css
+++ b/public/css/form.css
@@ -12,6 +12,7 @@
 .form-control input {
     display: block;
     width: 100%;
+    margin-bottom: 0.25rem;
 }
 .form-control input {
     border: 1px solid #5c2501;
