--- a/public/css/product.css
+++ b/public/css/product.css
@@ -27,6 +27,8 @@ button {
     background: #fff;
     border-radius: 3px;
     cursor: pointer;
+    width: 100%;
+    box-shadow: 0 0 5px 1px rgba(12, 12, 12, 0.4);
 }
 
 button:hover {
