--- a/public/css/product.css
+++ b/public/css/product.css
@@ -11,8 +11,11 @@
 
 .form-control label,
 .form-control input {
+    box-sizing: border-box;
     display: block;
     width: 100%;
+    padding: 5px;
+    font: inherit;
 }
 .form-control input {
     border: 1px solid #5c2501;
@@ -29,6 +32,7 @@ button {
     cursor: pointer;
     width: 100%;
     box-shadow: 0 0 5px 1px rgba(12, 12, 12, 0.4);
+    padding: 5px;
 }
 
 button:hover {
