working on the navigation, registering the routes, store product data, etc

--- a/public/css/product.css
+++ b/public/css/product.css
@@ -10,17 +10,25 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea {
     box-sizing: border-box;
     display: block;
     width: 100%;
     padding: 5px;
     font: inherit;
 }
-.form-control input {
+.form-control input,
+.form-control textarea {
     border: 1px solid #5c2501;
     font: inherit;
     border-radius: 2px;
+}
+
+.form-control input:focus,
+.form-control textarea:focus {
+    outline-color: #e9bf07;
+    color: #9b3304;
 }
 
 button {
