--- a/public/css/main.css
+++ b/public/css/main.css
@@ -94,8 +94,8 @@ main {
 
 .btn {
     font: inherit;
-    border: 1px solid #00695c;
-    color: #00695c;
+    border: 1px solid #f34915;
+    color: #f34915;
     background: white;
     border-radius: 3px;
     cursor: pointer;
@@ -103,7 +103,7 @@ main {
 
 .btn:hover,
 .btn:active {
-    background-color: #00695c;
+    background-color: #f34915;
     color: white;
 }
 
