--- a/views/shop/product-lists.ejs
+++ b/views/shop/product-lists.ejs
@@ -1,7 +1,7 @@
-<%- include('includes/head.ejs')%> 
+<%- include('../includes/head.ejs')%> 
 </head>
 <body>
-    <%- include('includes/navigation.ejs')%>
+    <%- include('../includes/navigation.ejs')%>
     <main>
         <% if(prods.length > 0) { %>
             <div class="grid">
@@ -11,18 +11,20 @@
                             <h1 class="product__title"><%= product.title %></h1>
                         </header>
                         <div class="card__image">
-                            <img src="https://images.unsplash.com/photo-1549122728-f519709caa9c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTJ8fGJvb2t8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=400&q=60" alt="image">
+                            <img src="<%= product.imageUrl %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price">₹ 199</h2>
+                            <h2 class="product__price">₹ <%= product.price %></h2>
                             <div class="product__description">
-                                A very interesting book about so many even more.
+                                <%= product.description %>
                             </div>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">
-                                Add to Cart 🤝
-                            </button>
+                            <form action="/add-to-cart" method="POST">
+                                <button class="btn">
+                                    Add to Cart 🤝
+                                </button>
+                            </form>
                         </div>
                     </article>
                 <% } %>
@@ -32,4 +34,4 @@
         <% } %>
     </main>
     
-<%- include('includes/end.ejs') %>
+<%- include('../includes/end.ejs') %>
