--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,117 +1,211 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,700');
+
+* {
+  box-sizing: border-box;
+}
+
 body {
-    margin: 0;
-    padding: 0;
-    font-family: sans-serif;
+  padding: 0;
+  margin: 0;
+  font-family: 'Open Sans', sans-serif;
 }
 
 main {
-    padding: 1rem;
+  padding: 1rem;
+  margin: auto;
 }
+
+form {
+  display: inline;
+}
+
 .main-header {
-    width: 100%;
-    height: 3.5rem;
-    padding: 0 1.5rem;
-    background: linear-gradient(123deg, #FFFCAC 0%, #FFFFFF 67%), linear-gradient(180deg, #D8D8D8 0%, #6B0000 100%), linear-gradient(142deg, #F9F5F0 0%, #F9F5F0 33%, #F2EAD3 calc(33% + 1px), #F2EAD3 56%, #F4991A calc(56% + 1px), #F4991A 62%, #321313 calc(62% + 1px), #321313 100%);
-    background-blend-mode: multiply, overlay, normal;
+  width: 100%;
+  height: 3.5rem;
+  background-color: #00695c;
+  padding: 0 1.5rem;
+  display: flex;
+  align-items: center;
 }
+
 .main-header__nav {
-    height: 100%;
-    display: flex;
-    align-items: center;
+  height: 100%;
+  display: none;
+  align-items: center;
 }
-.main-header-item-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    
+
+.main-header__item-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
 }
-.main-header__item a{
-    text-decoration: none;
-}
+
 .main-header__item {
-    margin: 0 1rem;
-    font-size: 22px;
-    font-weight: bold;
-    background: -webkit-linear-gradient(#fac721, #5c2501);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  margin: 0 1rem;
+  padding: 0;
+}
+
+.main-header__item a {
+  text-decoration: none;
+  color: white;
 }
 
 .main-header__item a:hover,
-.main-header__item a:active {
-    background: -webkit-linear-gradient(#5c2501,#fac721);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+.main-header__item a:active,
 .main-header__item a.active {
-    background: -webkit-linear-gradient(#440b01,#f54b17);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  color: #ffeb3b;
+}
+
+.mobile-nav {
+  width: 30rem;
+  height: 100vh;
+  max-width: 90%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  background: white;
+  z-index: 10;
+  padding: 2rem 1rem 1rem 2rem;
+  transform: translateX(-100%);
+  transition: transform 0.3s ease-out;
+}
+
+.mobile-nav.open {
+  transform: translateX(0);
+}
+
+.mobile-nav__item-list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+}
+
+.mobile-nav__item {
+  margin: 1rem;
+  padding: 0;
+}
+
+.mobile-nav__item a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5rem;
+  padding: 0.5rem 2rem;
+}
+
+.mobile-nav__item a:active,
+.mobile-nav__item a:hover,
+.mobile-nav__item a.active {
+  background: #00695c;
+  color: white;
+  border-radius: 3px;
+}
+
+#side-menu-toggle {
+  border: 1px solid white;
+  font: inherit;
+  padding: 0.5rem;
+  display: block;
+  background: transparent;
+  color: white;
+  cursor: pointer;
+}
+
+#side-menu-toggle:focus {
+  outline: none;
+}
+
+#side-menu-toggle:active,
+#side-menu-toggle:hover {
+  color: #ffeb3b;
+  border-color: #ffeb3b;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 5;
+  display: none;
 }
 
 .grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    align-items: stretch;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: stretch;
 }
 
 .card {
-    margin-bottom: 1rem;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.26);
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
 }
 
 .card__header,
 .card__content {
-    padding: 1rem;
+  padding: 1rem;
 }
 
 .card__header h1,
 .card__content h1,
 .card__content h2,
 .card__content p {
-    margin: 0;
+  margin: 0;
 }
 
 .card__image {
-    width: 100%;
+  width: 100%;
 }
 
 .card__image img {
-    width: 100%;
+  width: 100%;
 }
 
 .card__actions {
-    padding: 1rem;
-    text-align: center;
+  padding: 1rem;
+  text-align: center;
 }
 
 .card__actions button,
 .card__actions a {
-    margin: 0 0.25rem;
+  margin: 0 0.25rem;
 }
 
 .btn {
-    font: inherit;
-    border: 1px solid #f34915;
-    color: #f34915;
-    background: white;
-    border-radius: 3px;
-    cursor: pointer;
+  display: inline-block;
+  padding: 0.25rem 1rem;
+  text-decoration: none;
+  font: inherit;
+  border: 1px solid #00695c;
+  color: #00695c;
+  background: white;
+  border-radius: 3px;
+  cursor: pointer;
 }
 
 .btn:hover,
 .btn:active {
-    background-color: #f34915;
-    color: white;
+  background-color: #00695c;
+  color: white;
 }
 
-/* for 404 page */
-.error-msg {
-    color: #991706;
-    margin: 2rem;
+@media (min-width: 768px) {
+  .main-header__nav {
+    display: flex;
+  }
 
+  #side-menu-toggle {
+    display: none;
+  }
 }
 
-/* ******** */
+
+
+
+.centered {
+  text-align: center;
+}
