--- a/public/css/product.css
+++ b/public/css/product.css
@@ -1,50 +1,27 @@
-
 .product-form {
     width: 20rem;
     max-width: 90%;
     margin: auto;
-}
-
-.form-control {
-    margin: 1rem 0;
-}
-
-.form-control label,
-.form-control input,
-.form-control textarea {
-    box-sizing: border-box;
     display: block;
-    width: 100%;
-    padding: 5px;
-    font: inherit;
-}
-.form-control input,
-.form-control textarea {
-    border: 1px solid #5c2501;
-    font: inherit;
-    border-radius: 2px;
 }
 
-.form-control input:focus,
-.form-control textarea:focus {
-    outline-color: #e9bf07;
-    color: #9b3304;
+.product-item {
+    width: 20rem;
+    max-width: 95%;
+    margin: 1rem;
 }
 
-button {
-    margin-top: 10px;
-    font: inherit;
-    border: 1px solid #000;
-    background: #fff;
-    border-radius: 3px;
-    cursor: pointer;
-    width: 100%;
-    box-shadow: 0 0 5px 1px rgba(12, 12, 12, 0.4);
-    padding: 5px;
+.product__title {
+    font-size: 1.2rem;
+    text-align: center;
 }
 
-button:hover {
-    border: 1px solid #fff;
-    background: rgba(31, 6, 6, 0.829);
-    color: #fff;
+.product__price {
+    text-align: center;
+    color: #4d4d4d;
+    margin-bottom: 0.5rem;
+}
+
+.product__description {
+    text-align: center;
 }
