--- a/views/shop/product-details.ejs
+++ b/views/shop/product-details.ejs
@@ -12,11 +12,7 @@
                 </div>
                 <h2><%= product.price %></h2>
                 <p><%= product.description %></p>
-                <form action="/cart" method="POST">
-                    <button class="btn" action="submit">
-                        Add to Cart
-                    </button>
-                </form>
+                <%- include('../includes/addToCart.ejs', {product: product}) %>
             </div>
         </main>
         <%- include('../includes/end.ejs') %>
