--- a/views/shop/product-lists.ejs
+++ b/views/shop/product-lists.ejs
@@ -21,11 +21,7 @@
                         </div>
                         <div class="card__actions">
                             <a href="/products/<%= product.id %>" class="btn">Details</a>
-                            <form action="/add-to-cart" method="POST">
-                                <button class="btn">
-                                    Add to Cart 🤝
-                                </button>
-                            </form>
+                            <%- include('../includes/addToCart.ejs', {product: product}) %>
                         </div>
                     </article>
                 <% } %>
