--- a/public/css/main.css
+++ b/public/css/main.css
@@ -25,7 +25,8 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #00695c;
+  /* background-color: #00695c; */
+  background: linear-gradient(33.9deg, #79d690 0%, #00695c 100%);
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -216,4 +217,17 @@ form {
 
 .centered {
   text-align: center;
+}
+
+
+
+
+
+
+.demoImg {
+  display: flex;
+  width: 100px;
+  height: auto;
+  align-items: center;
+  justify-content: center;
 }
